# advent-of-faith

./: .envrc  .gitignore  Cargo.toml  README.md
.run/: Run advent-of-faith.run.xml  build advent-of-faith.run.xml  deploy advent-of-faith.run.xml  run postgres only.run.xml
.sqlx/: query-037847962bb0d25ea2a2c6494fe6d9fdcd8a16b2985035bb37c4dd1a531da68f.json  query-11dbd6dbab990f2b53a5947a0d61b0829b63180d9a9187c11ada1d5b177bd6d6.json  query-12686ceac80fcc2fd2ac3d5d5d2e7a6daec3e6d755dabda2fcbe2580f5c8e63d.json  query-152b9b0abf0d4bc1a7594ecb9a1399e14ee4e82c047960816a485587ee045c9d.json  query-160741fc32cbc288991a17f1ed1f63d29a170a1705b0c2913ea4bfb7b63f2236.json  query-17d981615b998e21d815f612a7c56f9ab4431d9eb6cc9bb2cf8c41869fe4a0a2.json  query-17f385969d8e84e93d32e200484903f911a05fd153f509d3a05bffabc4aa883b.json  query-1880434ab4bfac2f3d6feafcc695288431f09a70c906cb0eda6f452e57a04109.json  query-1f39aa71abbd6f53b5a17e9ad96dea0c85eb03b648874274eafcf236783b89b9.json  query-2b96543433fc2de5cda411de8af58fe7398934ae5a7e1ac8a628ba5bc10be526.json  query-2c4fe5afd4d64a615bb95a585f56dda85539dff4efb7f5e8977d57ecf282d6c6.json  query-31374f614310fe878b7f8331077991e088eb2526f67f2bb3c76bc2ad62917291.json  query-3729f8d952c7fd0c204c7e2b3431f28ce1419235e06ef39dff4569d9c860afb8.json  query-3f056f08b06746a7f8c1c852f2592a12f57a6c59198aa550901ab01a257b9ddf.json  query-4429b472f27d2014ab6e18f439edeac42c5804107e892ee3765664b0f8e52b11.json  query-44b738587db031a43569ea5dd20905fe95fc5cf0b37b37ca0efc3a69e1ac25cb.json  query-46070bf2f9a6b066159ae7a84e62bd6497e93fb84a874e04db0ce42f38158cbe.json  (+38 more)
(+51 files in other folders)
