[package]
name = "advent-of-faith"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["typed-header","cookie"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
askama = "0.14.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio","postgres","uuid","chrono" ] }
argon2 = "0.5.3"
uuid = "1.18.1"
chrono = "0.4.42"

[[bin]]
name = "advent-of-faith"
path = "./src/main.rs"